// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers App matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="MuiPaper-root-5 makeStyles-root-2 makeStyles-root-4 MuiPaper-elevation1-8 MuiPaper-rounded-6"
    >
      <div
        class="makeStyles-root-33"
      >
        <a
          class="MuiAvatar-root-36 makeStyles-avatar-32 MuiAvatar-colorDefault-37"
          href="#/"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-39"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 14h-3v3h-2v-3H8v-2h3v-3h2v3h3v2zm-3-7V3.5L18.5 9H13z"
            />
          </svg>
        </a>
        <div
          class="makeStyles-titleWrap-34"
        >
          <h5
            class="MuiTypography-root-48 makeStyles-brandFont-35 MuiTypography-h5-57"
          >
            Of Note
            <small>
              <em>
                s
              </em>
            </small>
          </h5>
          <h6
            class="MuiTypography-root-48 makeStyles-brandFont-35 MuiTypography-subtitle2-60 MuiTypography-colorTextSecondary-74"
          >
            Offline note taking
          </h6>
        </div>
        <button
          class="MuiButtonBase-root-87 MuiIconButton-root-78"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label-86"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-39"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 15.31L23.31 12 20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69zM12 18c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root-180"
          />
        </button>
      </div>
      <div
        class="makeStyles-filter-3"
      >
        <div
          class="MuiFormControl-root-93 MuiTextField-root-92 makeStyles-inp-90 MuiFormControl-fullWidth-96"
        >
          <label
            class="MuiFormLabel-root-109 MuiInputLabel-root-97 MuiInputLabel-formControl-103 MuiInputLabel-animated-106 MuiInputLabel-shrink-105 MuiInputLabel-outlined-108"
            data-shrink="true"
            for="filter"
            id="filter-label"
          >
            Filter
          </label>
          <div
            class="MuiInputBase-root-131 MuiOutlinedInput-root-116 MuiInputBase-fullWidth-140 MuiInputBase-formControl-132"
          >
            <input
              aria-describedby="filter-helper-text"
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input-141 MuiOutlinedInput-input-125"
              id="filter"
              name="filter"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-151 MuiOutlinedInput-notchedOutline-124"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-152"
                style="width: 38px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root-153 MuiFormHelperText-contained-157"
            id="filter-helper-text"
          >
            Search tags or titles
          </p>
        </div>
      </div>
      <hr
        class="MuiDivider-root-161"
      />
      <div>
        <ul
          class="MuiList-root-168 MuiList-padding-169"
        />
      </div>
    </div>
    <div
      class="makeStyles-root-175"
    >
      <form
        data-testid="form"
      >
        <div
          class="makeStyles-root-176"
        >
          <button
            class="MuiButtonBase-root-87 MuiIconButton-root-78 makeStyles-mobileMenu-177"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-86"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-39"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-180"
            />
          </button>
          <span
            class="MuiTypography-root-48 makeStyles-title-179 MuiTypography-h5-57"
          >
            New Note
          </span>
        </div>
        <div
          class="MuiFormControl-root-93 MuiTextField-root-92 makeStyles-inp-90 MuiFormControl-fullWidth-96"
        >
          <label
            class="MuiFormLabel-root-109 MuiInputLabel-root-97 MuiInputLabel-formControl-103 MuiInputLabel-animated-106 MuiInputLabel-outlined-108"
            data-shrink="false"
            for="title"
            id="title-label"
          >
            Title
          </label>
          <div
            class="MuiInputBase-root-131 MuiOutlinedInput-root-116 MuiInputBase-fullWidth-140 MuiInputBase-formControl-132"
          >
            <input
              aria-describedby="title-helper-text"
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input-141 MuiOutlinedInput-input-125"
              id="title"
              name="title"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-151 MuiOutlinedInput-notchedOutline-124"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-152"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root-153 MuiFormHelperText-contained-157"
            id="title-helper-text"
          >
             
          </p>
        </div>
        <div
          class="MuiFormControl-root-93 MuiTextField-root-92 makeStyles-inp-90 MuiFormControl-fullWidth-96"
        >
          <label
            class="MuiFormLabel-root-109 MuiInputLabel-root-97 MuiInputLabel-formControl-103 MuiInputLabel-animated-106 MuiInputLabel-outlined-108"
            data-shrink="false"
            for="md"
            id="md-label"
          >
            Note
          </label>
          <div
            class="MuiInputBase-root-131 MuiOutlinedInput-root-116 MuiInputBase-fullWidth-140 MuiInputBase-formControl-132 MuiInputBase-multiline-139 MuiOutlinedInput-multiline-123"
          >
            <textarea
              aria-describedby="md-helper-text"
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input-141 MuiOutlinedInput-input-125 undefined makeStyles-textarea-173 MuiInputBase-inputMultiline-146 MuiOutlinedInput-inputMultiline-128"
              id="md"
              name="md"
              rows="2"
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-151 MuiOutlinedInput-notchedOutline-124"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-152"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root-153 MuiFormHelperText-contained-157"
            id="md-helper-text"
          >
            Supports github flavored markdown
          </p>
        </div>
        <div
          class="MuiFormControl-root-93 MuiTextField-root-92 makeStyles-inp-90 MuiFormControl-fullWidth-96"
        >
          <label
            class="MuiFormLabel-root-109 MuiInputLabel-root-97 MuiInputLabel-formControl-103 MuiInputLabel-animated-106 MuiInputLabel-outlined-108"
            data-shrink="false"
            for="tags"
            id="tags-label"
          >
            Tags
          </label>
          <div
            class="MuiInputBase-root-131 MuiOutlinedInput-root-116 MuiInputBase-fullWidth-140 MuiInputBase-formControl-132"
          >
            <input
              aria-describedby="tags-helper-text"
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input-141 MuiOutlinedInput-input-125"
              id="tags"
              name="tags"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-151 MuiOutlinedInput-notchedOutline-124"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-152"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root-153 MuiFormHelperText-contained-157"
            id="tags-helper-text"
          >
            Separated by spaces
          </p>
        </div>
        <div />
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`containers CreateNoteForm matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-193"
  >
    <form
      data-testid="form"
    >
      <div
        class="makeStyles-root-194"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-mobileMenu-195"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiTypography-root makeStyles-title-197 MuiTypography-h5"
        >
          New Note
        </span>
        <div
          class="makeStyles-actions-196"
        >
          <button
            aria-label="save note"
            class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-btn-250 MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall"
            tabindex="0"
            type="submit"
          >
            <span
              class="MuiButton-label"
            >
              Save 
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-icon-190"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5h10v4z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-249 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
          for="title"
          id="title-label"
        >
          Title
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-describedby="title-helper-text"
            aria-invalid="false"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="title"
            name="title"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-338 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-339"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
          id="title-helper-text"
        >
           
        </p>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-249 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
          for="md"
          id="md-label"
        >
          Note
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
        >
          <textarea
            aria-describedby="md-helper-text"
            aria-invalid="false"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input undefined makeStyles-textarea-191 MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
            id="md"
            name="md"
            rows="2"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-338 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-339"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
          id="md-helper-text"
        >
          Supports github flavored markdown
        </p>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-249 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
          for="tags"
          id="tags-label"
        >
          Tags
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-describedby="tags-helper-text"
            aria-invalid="false"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="tags"
            name="tags"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-338 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-339"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
          id="tags-helper-text"
        >
          Separated by spaces
        </p>
      </div>
      <div />
    </form>
  </div>
</DocumentFragment>
`;

exports[`containers EditNoteForm matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-1370"
  >
    <form
      data-testid="form"
    >
      <div
        class="makeStyles-root-1371"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-mobileMenu-1372"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiTypography-root makeStyles-title-1374 MuiTypography-h5"
        >
          test title
        </span>
        <div
          class="makeStyles-actions-1373"
        >
          <button
            class="MuiButtonBase-root MuiButton-root makeStyles-deleteBtn-1367 MuiButton-contained makeStyles-btn-1427 MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <span>
                Delete 
              </span>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-icon-1366"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-btn-1427 MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall"
            href="#/undefined"
            role="button"
            tabindex="0"
          >
            <span
              class="MuiButton-label"
            >
              <span>
                View 
              </span>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-icon-1366"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-1426 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
          data-shrink="true"
          for="title"
          id="title-label"
        >
          Title
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-describedby="title-helper-text"
            aria-invalid="false"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="title"
            name="title"
            type="text"
            value="test title"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-1515 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-1516"
              style="width: 0px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
          id="title-helper-text"
        >
           
        </p>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-1426 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
          data-shrink="true"
          for="md"
          id="md-label"
        >
          Note
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
        >
          <textarea
            aria-describedby="md-helper-text"
            aria-invalid="false"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input undefined makeStyles-textarea-1368 MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
            id="md"
            name="md"
            rows="2"
          >
            test markdown
          </textarea>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-1515 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-1516"
              style="width: 0px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
          id="md-helper-text"
        >
          Supports github flavored markdown
        </p>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-1426 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
          data-shrink="true"
          for="tags"
          id="tags-label"
        >
          Tags
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-describedby="tags-helper-text"
            aria-invalid="false"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="tags"
            name="tags"
            type="text"
            value="testtag testtag2"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-1515 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-1516"
              style="width: 0px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
          id="tags-helper-text"
        >
          Separated by spaces
        </p>
      </div>
      <div />
    </form>
  </div>
</DocumentFragment>
`;

exports[`containers NoteDisplay matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-2385"
  >
    <div
      class="makeStyles-root-2386"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-mobileMenu-2387"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <span
        class="MuiTypography-root makeStyles-title-2389 MuiTypography-h5"
      >
        test title
      </span>
      <div
        class="makeStyles-actions-2388"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-btn-2442 MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall"
          href="#/undefined/edit"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label"
          >
            Edit 
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-icon-2381"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
    <span
      class="makeStyles-content-2380"
    >
      asdfasdf
    </span>
    <div
      class="makeStyles-tags-2383"
    >
      <div
        class="MuiChip-root makeStyles-chip-2382 MuiChip-outlined"
      >
        <span
          class="MuiChip-label"
        >
          test1
        </span>
      </div>
      <div
        class="MuiChip-root makeStyles-chip-2382 MuiChip-outlined"
      >
        <span
          class="MuiChip-label"
        >
          test2
        </span>
      </div>
    </div>
    <div />
  </div>
</DocumentFragment>
`;

exports[`containers SideBar matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root makeStyles-root-2642 makeStyles-root-2644 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="makeStyles-root-2673"
    >
      <a
        class="MuiAvatar-root makeStyles-avatar-2672 MuiAvatar-colorDefault"
        href="#/"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 14h-3v3h-2v-3H8v-2h3v-3h2v3h3v2zm-3-7V3.5L18.5 9H13z"
          />
        </svg>
      </a>
      <div
        class="makeStyles-titleWrap-2674"
      >
        <h5
          class="MuiTypography-root makeStyles-brandFont-2675 MuiTypography-h5"
        >
          Of Note
          <small>
            <em>
              s
            </em>
          </small>
        </h5>
        <h6
          class="MuiTypography-root makeStyles-brandFont-2675 MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
        >
          Offline note taking
        </h6>
      </div>
      <button
        class="MuiButtonBase-root MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 15.31L23.31 12 20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69zM12 18c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <a
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root"
        href="https://github.com/jhackshaw/ofnotes"
        tabindex="0"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 .3a12 12 0 0 0-3.8 23.4c.6.1.8-.3.8-.6v-2c-3.3.7-4-1.6-4-1.6-.6-1.4-1.4-1.8-1.4-1.8-1-.7.1-.7.1-.7 1.2 0 1.9 1.2 1.9 1.2 1 1.8 2.8 1.3 3.5 1 0-.8.4-1.3.7-1.6-2.7-.3-5.5-1.3-5.5-6 0-1.2.5-2.3 1.3-3.1-.2-.4-.6-1.6 0-3.2 0 0 1-.3 3.4 1.2a11.5 11.5 0 0 1 6 0c2.3-1.5 3.3-1.2 3.3-1.2.6 1.6.2 2.8 0 3.2.9.8 1.3 1.9 1.3 3.2 0 4.6-2.8 5.6-5.5 5.9.5.4.9 1 .9 2.2v3.3c0 .3.1.7.8.6A12 12 0 0 0 12 .3"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </div>
    <div
      class="makeStyles-filter-2643"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-2730 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
          data-shrink="true"
          for="filter"
          id="filter-label"
        >
          Filter
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-describedby="filter-helper-text"
            aria-invalid="false"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input"
            id="filter"
            name="filter"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-2791 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-2792"
              style="width: 38px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
          id="filter-helper-text"
        >
          Search tags or titles
        </p>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div>
      <ul
        class="MuiList-root MuiList-padding"
      />
    </div>
  </div>
</DocumentFragment>
`;
